@@ -2,6 +2,9 @@
 Change log for block_taskchain_navigation
 ========================================
 
+2023-09-29 (38)
+ - add help link to list of HTML  color names suitable for gradelinecolor setting
+
 2023-04-21 (37)
  - fix display of grades on coure page in Moodle >= 4.x
 
